--- a/ios/MobiTrade/Info.plist
+++ b/ios/MobiTrade/Info.plist
@@ -64,6 +64,12 @@
 	<string/>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>This app needs access to your location.</string>
+  <key>NSLocationWhenInUseUsageDescription</key>
+  <string>This app needs access to your location to improve login security and personalize your experience.</string>
+  <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+  <string>We use your location to detect device login details and ensure account safety.</string>
+  <key>NSLocationAlwaysUsageDescription</key>
+  <string>We need access to your location even when the app is in the background (optional).</string>
 	<key>RCTNewArchEnabled</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
