--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-check-box": "^2.1.7",
     "react-native-device-info": "^14.1.1",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-image-picker": "^8.2.1",
@@ -40,6 +41,7 @@
     "react-native-pager-view": "^6.8.1",
     "react-native-paper": "^5.14.5",
     "react-native-popup-dialog": "^0.7.23",
+    "react-native-razorpay": "^2.3.1",
     "react-native-reanimated": "^4.0.2",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-responsive-dimensions": "^3.1.1",
