--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@pdf-lib/fontkit": "^1.1.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-community/checkbox": "^0.5.20",
@@ -25,6 +26,8 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@types/react-native-snap-carousel": "^3.8.11",
     "axios": "^1.10.0",
+    "buffer": "^6.0.3",
+    "pdf-lib": "^1.17.1",
     "popup-ui": "^1.2.2",
     "react": "19.0.0",
     "react-native": "0.79.2",
@@ -32,8 +35,10 @@
     "react-native-device-info": "^14.1.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.12.4",
+    "react-native-fs": "^2.20.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-html-to-pdf": "^1.3.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^14.0.0-rc.1",
@@ -46,8 +51,9 @@
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "^5.4.1",
+    "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.11.1",
+    "react-native-share": "^12.2.1",
     "react-native-size-matters": "^0.4.2",
     "react-native-snap-carousel": "^1.6.1",
     "react-native-step-indicator": "^1.0.3",
@@ -57,6 +63,7 @@
     "react-native-tab-view": "^4.1.2",
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.16.0",
     "react-native-worklets": "^0.4.1",
     "react-redux": "^9.2.0",
     "rn-range-slider": "^2.2.2"
